TC/Demo/src/main/antlr4/com/compilador/.antlr/MiLenguajeParser.java
// Generated from c:/Users/maxim/OneDrive/Documentos/TrabajoFinalTC-Bandini-Cecconello/Demo/src/main/antlr4/com/compilador/MiLenguaje.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiLenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PA=1, PC=2, CA=3, CC=4, LA=5, LC=6, PYC=7, COMA=8, IGUAL=9, MAYOR=10, 
		MAYOR_IGUAL=11, MENOR=12, MENOR_IGUAL=13, EQL=14, DISTINTO=15, SUM=16, 
		RES=17, MUL=18, DIV=19, MOD=20, OR=21, AND=22, NOT=23, FOR=24, WHILE=25, 
		IF=26, ELSE=27, BREAK=28, INT=29, CHAR=30, CONST=31, DOUBLE=32, VOID=33, 
		FLOAT=34, STRING_TIPO=35, RETURN=36, INCREMENTO=37, DECREMENTO=38, TRUE=39, 
		FALSE=40, URL=41, EMAIL=42, CUIL=43, DNI=44, FECHA=45, FECHAISO=46, TELEFONO_INTERNACIONAL=47, 
		TELEFONO_NACIONAL=48, CODIGO_POSTAL=49, IP=50, PASSWORD=51, NOMBRE_APELLIDO=52, 
		PATENTE=53, TARJETA_CREDITO=54, ID=55, STRING=56, INTEGER=57, DECIMAL=58, 
		CHARACTER=59, COMENTARIO_LINEA=60, COMENTARIO_BLOQUE=61, WS=62, OTRO=63;
	public static final int
		RULE_inicio = 0, RULE_instruccionIniciales = 1, RULE_instruccion = 2, 
		RULE_llamadaExpr = 3, RULE_cuerpo = 4, RULE_nota = 5, RULE_condicionIf = 6, 
		RULE_bucleWhile = 7, RULE_bucleFor = 8, RULE_initFor = 9, RULE_updateFor = 10, 
		RULE_incDec = 11, RULE_interrupcion = 12, RULE_definicionFuncion = 13, 
		RULE_listaParams = 14, RULE_parametro = 15, RULE_definicionVariable = 16, 
		RULE_definicionSinPunto = 17, RULE_asignacionVariable = 18, RULE_asignacionSinPunto = 19, 
		RULE_retornoInst = 20, RULE_tipoDato = 21, RULE_expresion = 22, RULE_opBinaria = 23, 
		RULE_listaArgumentos = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "instruccionIniciales", "instruccion", "llamadaExpr", "cuerpo", 
			"nota", "condicionIf", "bucleWhile", "bucleFor", "initFor", "updateFor", 
			"incDec", "interrupcion", "definicionFuncion", "listaParams", "parametro", 
			"definicionVariable", "definicionSinPunto", "asignacionVariable", "asignacionSinPunto", 
			"retornoInst", "tipoDato", "expresion", "opBinaria", "listaArgumentos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "','", "'='", 
			"'>'", "'>='", "'<'", "'<='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'||'", "'&&'", "'!'", "'for'", "'while'", "'if'", "'else'", "'break'", 
			"'int'", "'char'", "'const'", "'double'", "'void'", "'float'", "'string'", 
			"'return'", "'++'", "'--'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PA", "PC", "CA", "CC", "LA", "LC", "PYC", "COMA", "IGUAL", "MAYOR", 
			"MAYOR_IGUAL", "MENOR", "MENOR_IGUAL", "EQL", "DISTINTO", "SUM", "RES", 
			"MUL", "DIV", "MOD", "OR", "AND", "NOT", "FOR", "WHILE", "IF", "ELSE", 
			"BREAK", "INT", "CHAR", "CONST", "DOUBLE", "VOID", "FLOAT", "STRING_TIPO", 
			"RETURN", "INCREMENTO", "DECREMENTO", "TRUE", "FALSE", "URL", "EMAIL", 
			"CUIL", "DNI", "FECHA", "FECHAISO", "TELEFONO_INTERNACIONAL", "TELEFONO_NACIONAL", 
			"CODIGO_POSTAL", "IP", "PASSWORD", "NOMBRE_APELLIDO", "PATENTE", "TARJETA_CREDITO", 
			"ID", "STRING", "INTEGER", "DECIMAL", "CHARACTER", "COMENTARIO_LINEA", 
			"COMENTARIO_BLOQUE", "WS", "OTRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiLenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiLenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MiLenguajeParser.EOF, 0); }
		public List<InstruccionInicialesContext> instruccionIniciales() {
			return getRuleContexts(InstruccionInicialesContext.class);
		}
		public InstruccionInicialesContext instruccionIniciales(int i) {
			return getRuleContext(InstruccionInicialesContext.class,i);
		}
		public List<NotaContext> nota() {
			return getRuleContexts(NotaContext.class);
		}
		public NotaContext nota(int i) {
			return getRuleContext(NotaContext.class,i);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3494793379022110720L) != 0)) {
				{
				setState(52);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INT:
				case CHAR:
				case CONST:
				case DOUBLE:
				case VOID:
				case FLOAT:
				case STRING_TIPO:
				case ID:
					{
					setState(50);
					instruccionIniciales();
					}
					break;
				case COMENTARIO_LINEA:
				case COMENTARIO_BLOQUE:
					{
					setState(51);
					nota();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionInicialesContext extends ParserRuleContext {
		public DefinicionFuncionContext definicionFuncion() {
			return getRuleContext(DefinicionFuncionContext.class,0);
		}
		public DefinicionVariableContext definicionVariable() {
			return getRuleContext(DefinicionVariableContext.class,0);
		}
		public AsignacionVariableContext asignacionVariable() {
			return getRuleContext(AsignacionVariableContext.class,0);
		}
		public InstruccionInicialesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccionIniciales; }
	}

	public final InstruccionInicialesContext instruccionIniciales() throws RecognitionException {
		InstruccionInicialesContext _localctx = new InstruccionInicialesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instruccionIniciales);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				definicionFuncion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				definicionVariable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				asignacionVariable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public BucleForContext bucleFor() {
			return getRuleContext(BucleForContext.class,0);
		}
		public InstruccionInicialesContext instruccionIniciales() {
			return getRuleContext(InstruccionInicialesContext.class,0);
		}
		public CondicionIfContext condicionIf() {
			return getRuleContext(CondicionIfContext.class,0);
		}
		public BucleWhileContext bucleWhile() {
			return getRuleContext(BucleWhileContext.class,0);
		}
		public InterrupcionContext interrupcion() {
			return getRuleContext(InterrupcionContext.class,0);
		}
		public RetornoInstContext retornoInst() {
			return getRuleContext(RetornoInstContext.class,0);
		}
		public LlamadaExprContext llamadaExpr() {
			return getRuleContext(LlamadaExprContext.class,0);
		}
		public TerminalNode PYC() { return getToken(MiLenguajeParser.PYC, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				bucleFor();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				instruccionIniciales();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				condicionIf();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				bucleWhile();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				interrupcion();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(69);
				retornoInst();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(70);
				llamadaExpr();
				setState(71);
				match(PYC);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(73);
				expresion(0);
				setState(74);
				match(PYC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LlamadaExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public TerminalNode PA() { return getToken(MiLenguajeParser.PA, 0); }
		public TerminalNode PC() { return getToken(MiLenguajeParser.PC, 0); }
		public ListaArgumentosContext listaArgumentos() {
			return getRuleContext(ListaArgumentosContext.class,0);
		}
		public LlamadaExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamadaExpr; }
	}

	public final LlamadaExprContext llamadaExpr() throws RecognitionException {
		LlamadaExprContext _localctx = new LlamadaExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_llamadaExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(ID);
			setState(79);
			match(PA);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921367176282114L) != 0)) {
				{
				setState(80);
				listaArgumentos();
				}
			}

			setState(83);
			match(PC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuerpoContext extends ParserRuleContext {
		public TerminalNode LA() { return getToken(MiLenguajeParser.LA, 0); }
		public TerminalNode LC() { return getToken(MiLenguajeParser.LC, 0); }
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public List<NotaContext> nota() {
			return getRuleContexts(NotaContext.class);
		}
		public NotaContext nota(int i) {
			return getRuleContext(NotaContext.class,i);
		}
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cuerpo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(LA);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4611686018284781570L) != 0)) {
				{
				setState(88);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PA:
				case NOT:
				case FOR:
				case WHILE:
				case IF:
				case BREAK:
				case INT:
				case CHAR:
				case CONST:
				case DOUBLE:
				case VOID:
				case FLOAT:
				case STRING_TIPO:
				case RETURN:
				case INCREMENTO:
				case DECREMENTO:
				case TRUE:
				case FALSE:
				case URL:
				case EMAIL:
				case CUIL:
				case DNI:
				case FECHA:
				case FECHAISO:
				case TELEFONO_INTERNACIONAL:
				case TELEFONO_NACIONAL:
				case CODIGO_POSTAL:
				case IP:
				case PASSWORD:
				case NOMBRE_APELLIDO:
				case PATENTE:
				case TARJETA_CREDITO:
				case ID:
				case STRING:
				case INTEGER:
				case DECIMAL:
				case CHARACTER:
					{
					setState(86);
					instruccion();
					}
					break;
				case COMENTARIO_LINEA:
				case COMENTARIO_BLOQUE:
					{
					setState(87);
					nota();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NotaContext extends ParserRuleContext {
		public TerminalNode COMENTARIO_LINEA() { return getToken(MiLenguajeParser.COMENTARIO_LINEA, 0); }
		public TerminalNode COMENTARIO_BLOQUE() { return getToken(MiLenguajeParser.COMENTARIO_BLOQUE, 0); }
		public NotaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nota; }
	}

	public final NotaContext nota() throws RecognitionException {
		NotaContext _localctx = new NotaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nota);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==COMENTARIO_LINEA || _la==COMENTARIO_BLOQUE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionIfContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(MiLenguajeParser.IF, 0); }
		public TerminalNode PA() { return getToken(MiLenguajeParser.PA, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PC() { return getToken(MiLenguajeParser.PC, 0); }
		public List<CuerpoContext> cuerpo() {
			return getRuleContexts(CuerpoContext.class);
		}
		public CuerpoContext cuerpo(int i) {
			return getRuleContext(CuerpoContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(MiLenguajeParser.ELSE, 0); }
		public CondicionIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionIf; }
	}

	public final CondicionIfContext condicionIf() throws RecognitionException {
		CondicionIfContext _localctx = new CondicionIfContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condicionIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(IF);
			setState(98);
			match(PA);
			setState(99);
			expresion(0);
			setState(100);
			match(PC);
			setState(101);
			cuerpo();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(102);
				match(ELSE);
				setState(103);
				cuerpo();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BucleWhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(MiLenguajeParser.WHILE, 0); }
		public TerminalNode PA() { return getToken(MiLenguajeParser.PA, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PC() { return getToken(MiLenguajeParser.PC, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public BucleWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucleWhile; }
	}

	public final BucleWhileContext bucleWhile() throws RecognitionException {
		BucleWhileContext _localctx = new BucleWhileContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bucleWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(WHILE);
			setState(107);
			match(PA);
			setState(108);
			expresion(0);
			setState(109);
			match(PC);
			setState(110);
			cuerpo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BucleForContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(MiLenguajeParser.FOR, 0); }
		public TerminalNode PA() { return getToken(MiLenguajeParser.PA, 0); }
		public List<TerminalNode> PYC() { return getTokens(MiLenguajeParser.PYC); }
		public TerminalNode PYC(int i) {
			return getToken(MiLenguajeParser.PYC, i);
		}
		public TerminalNode PC() { return getToken(MiLenguajeParser.PC, 0); }
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public InitForContext initFor() {
			return getRuleContext(InitForContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public UpdateForContext updateFor() {
			return getRuleContext(UpdateForContext.class,0);
		}
		public BucleForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucleFor; }
	}

	public final BucleForContext bucleFor() throws RecognitionException {
		BucleForContext _localctx = new BucleForContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bucleFor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(FOR);
			setState(113);
			match(PA);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 36028865201569792L) != 0)) {
				{
				setState(114);
				initFor();
				}
			}

			setState(117);
			match(PYC);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152921367176282114L) != 0)) {
				{
				setState(118);
				expresion(0);
				}
			}

			setState(121);
			match(PYC);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(122);
				updateFor();
				}
			}

			setState(125);
			match(PC);
			setState(126);
			cuerpo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitForContext extends ParserRuleContext {
		public DefinicionSinPuntoContext definicionSinPunto() {
			return getRuleContext(DefinicionSinPuntoContext.class,0);
		}
		public AsignacionSinPuntoContext asignacionSinPunto() {
			return getRuleContext(AsignacionSinPuntoContext.class,0);
		}
		public InitForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initFor; }
	}

	public final InitForContext initFor() throws RecognitionException {
		InitForContext _localctx = new InitForContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_initFor);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case CHAR:
			case CONST:
			case DOUBLE:
			case VOID:
			case FLOAT:
			case STRING_TIPO:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				definicionSinPunto();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				asignacionSinPunto();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UpdateForContext extends ParserRuleContext {
		public AsignacionSinPuntoContext asignacionSinPunto() {
			return getRuleContext(AsignacionSinPuntoContext.class,0);
		}
		public IncDecContext incDec() {
			return getRuleContext(IncDecContext.class,0);
		}
		public UpdateForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_updateFor; }
	}

	public final UpdateForContext updateFor() throws RecognitionException {
		UpdateForContext _localctx = new UpdateForContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_updateFor);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				asignacionSinPunto();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				incDec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
